--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "author": "TemeASD",
     "license": "MIT",
     "dependencies": {
+        "cheerio": "^1.0.0-rc.2",
+        "cheerio-tableparser": "^1.0.1",
         "discord.js": "^11.4.2",
         "enmap": "^0.4.6",
         "enmap-level": "^1.0.1",
+        "fetch": "^1.1.0",
+        "leveldown": "^1.7.2",
         "moment": "^2.22.2",
-        "moment-duration-format": "^1.3.0"
+        "moment-duration-format": "^1.3.0",
+        "request": "^2.88.0",
+        "request-promise-native": "^1.0.5",
+        "tabletojson": "^0.9.8"
     }
 }
