--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "leveldown": "^1.7.2",
         "moment": "^2.22.2",
         "moment-duration-format": "^1.3.0",
+        "mongoose": "^5.4.2",
         "request": "^2.88.0",
         "request-promise-native": "^1.0.5",
         "tabletojson": "^0.9.8"
